# llm-gateway-1

./: .env.example  README.md  README_zh-CN.md
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  main.py  scheduler.py
backend/app/api/: deps.py
backend/app/api/admin/: logs.py  models.py
backend/app/api/proxy/: anthropic.py  openai.py
backend/app/common/: costs.py  mcp_auth.py  openai_responses.py  protocol_conversion.py  provider_protocols.py  reasoning.py  stream_usage.py  token_counter.py  usage_extractor.py
backend/app/common/protocol/: __init__.py  converters.py  registry.py
backend/app/db/: models.py  session.py
backend/app/domain/: api_key.py  log.py  model.py  provider.py
backend/app/mcp/: __init__.py  redaction.py  server.py
backend/app/providers/: anthropic_client.py  base.py  gemini_client.py  openai_client.py
backend/app/repositories/: log_repo.py  model_repo.py
backend/app/rules/: engine.py  models.py
backend/app/services/: __init__.py  active_requests.py  api_key_service.py  log_service.py  model_service.py  protocol_hooks.py  provider_health.py  provider_service.py  proxy_service.py  retry_handler.py  strategy.py
backend/migrations/: README.md  add_api_key_is_mcp_admin_column.sql  add_api_key_record_details_column.sql  add_cache_creation_price_columns.sql
backend/tests/: test_header_stripping.py  test_mcp_auth.py  test_mcp_redaction.py  test_mcp_server.py
backend/tests/integration/: test_admin_providers.py
backend/tests/unit/: test_admin_log_detail_retention.py  test_db_in_progress_migration.py
(+83 files in other folders)
